feat: added primary and secondary button in, and fade-in animation of text in Hero

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
   }
 
   html {
-    @apply bg-background font-sans text-white;
+    @apply bg-background font-sans text-white-200;
     font-size: 62.5%;
   }
 }
