style: fix eslint custom highlight styling on Button component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,12 +14,16 @@
 }
 
 @layer utilities {
-  .navigation {
-    @apply fixed top-nav-height left-0 h-[calc(100vh_-_var(--nav-height))] w-full overflow-auto bg-background transition-opacity duration-500 md:relative md:top-0 md:block md:h-auto md:w-auto md:translate-x-0 md:overflow-hidden md:bg-transparent md:opacity-100 md:transition-none;
+  .highlight-primary {
+    @apply [&_.highlight]:ml-2;
   }
 
-  .text-shadhow {
-    text-shadow: rbg(0 0 0 / 56%) 0px 3px 12px;
+  .highlight-secondary {
+    @apply [&_.highlight]:bg-white-100 [&_.highlight]:rounded-full [&_.highlight]:px-2 [&_.highlight]:ml-2 [&_.highlight]:-mr-2;
+  }
+
+  .navigation {
+    @apply fixed top-nav-height left-0 h-[calc(100vh_-_var(--nav-height))] w-full overflow-auto bg-background transition-opacity duration-500 md:relative md:top-0 md:block md:h-auto md:w-auto md:translate-x-0 md:overflow-hidden md:bg-transparent md:opacity-100 md:transition-none;
   }
 
   .text-gradient {
@@ -30,5 +34,9 @@
     );
     background-clip: text;
     color: transparent;
+  }
+
+  .text-shadhow {
+    text-shadow: rbg(0 0 0 / 56%) 0px 3px 12px;
   }
 }
