feat: client illustations stars sunrise gradient

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,14 @@
     @apply bg-white-100 rounded-full px-2 ml-2 -mr-2;
   }
 
+  .mask-radial-faded {
+    mask-image: radial-gradient(
+      circle at center center,
+      black,
+      transparent 80%
+    );
+  }
+
   .navigation {
     @apply fixed top-nav-height left-0 h-[calc(100vh_-_var(--nav-height))] w-full overflow-auto bg-background transition-opacity duration-500 md:relative md:top-0 md:block md:h-auto md:w-auto md:translate-x-0 md:overflow-hidden md:bg-transparent md:opacity-100 md:transition-none;
   }
